hphp/test/slow/constant/bad-arrays.php.expectf
"const BADARRAY = [$a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(289813d82008e046f76cb804933460db) : eval()'d code on line 1

==============================================================
"const BADARRAY = [100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(23613acee8db6e4282e093df21a2b230) : eval()'d code on line 1

==============================================================
"const BADARRAY = [new stdclass];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(2254b790ac563cabfd727f751b29c549) : eval()'d code on line 1

==============================================================
"const BADARRAY = [foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(3b5198a14e4bce941862c8b00d9eb61c) : eval()'d code on line 1

==============================================================
"const BADARRAY = [1, [2, new stdclass], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(ba2675c2ecc7aad1556e5afb291107f8) : eval()'d code on line 1

==============================================================
"const BADARRAY = [1, [2, foobaz()], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(bd0d19e2788469ce4a17d5490e0660b0) : eval()'d code on line 1

==============================================================
"const BADARRAY = [1, [2, $a], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(540a37a49686a5eb499f596edd372fb0) : eval()'d code on line 1

==============================================================
"const BADARRAY = [1, [2, 100 + $a + 200], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(9abf43f8246ee90a755948eb68217bce) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[$a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(2cba27bc1f1f878da75e2b6174f306f3) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(c1df4c4ce7f27f00d1d90c200dfa280c) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[new stdclass];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(82e0c7f9870dcff771a3239ab554ed2a) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(76ece7c583ab444ac7701aa97f6aba48) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[1, vec[2, new stdclass], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(e2be6c9366d3fbc558dd9ab46b137658) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[1, vec[2, foobaz()], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(3f497f8def3a9300559b51d8e65f5104) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[1, vec[2, $a], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(d36769e0816cc71e0acaf1e025ae1cbb) : eval()'d code on line 1

==============================================================
"const BADVEC = vec[1, vec[2, 100 + $a + 200], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(af73f46f70f2dd50ed641ba2f310341c) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[0 => $a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(f0f1fa186d33d37610eff24d24afc100) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[100 => 100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(d70c73ae5c2946270d9f78cdb8aa743a) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => new stdclass];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(ddfe6dd1c32dc1d39865afd470b8fbca) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(d22849b922cb406e218c1f034e394d4e) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => new stdclass], 3 => 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(6dc55448aa89bf24f1957d1d33fab71f) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => foobaz()], 3 => 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(39b8b56b41a14164b3558c464f46f3a2) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => $a], 3 => 33];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(6b80710dcdd54c78bdd435b34828b7c5) : eval()'d code on line 1

==============================================================
"const BADDICT = dict[1 => 1, 2 => dict[100 => 2, 200 => 100 + $a + 200], 3 => 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(ca835caa0c4a3a3de6a95c07e15a2a51) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[$a];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(c1ca2f0c5a57dd2ef0744ec0d819651a) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[100 + $a + 200];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(26de30408fb89a439c48fad46140d26a) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[foobaz()];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(98d84fddf5ef71b640c05d03e760c966) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[1, keyset[2, foobaz()], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(0d64fa4036ec7c410c9e5c60da521430) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[1, keyset[2, $a], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(c0400f5c5789e0d871908997ac7b019c) : eval()'d code on line 1

==============================================================
"const BADKEYSET = keyset[1, ketset[2, 100 + $a + 200], 3];" ====>
Fatal error: Invalid expression in constant initializer in %s/test/slow/constant/bad-arrays.php(%d)(176ff94f619716935132b9a3813bec86) : eval()'d code on line 1

==============================================================
